@@ -1,0 +1,11 @@
+filters:
+  - true
+
+commentBody: |
+  Thanks for your contribution! Unfortunately, we don't use GitHub pull requests
+  to manage code contributions to this repository (and GitHub doesn't have any
+  way to disable pull requests entirely). Instead, please see
+  https://torsion.org/borgmatic/#contributing which provides full instructions
+  on how to submit pull requests. You can even use your GitHub account to login.
+
+addLabel: false
