@@ -8,6 +8,9 @@
    1 (info about steps borgmatic is taking). This prevented logs from showing up in monitoring
    services like Healthchecks unless you had an explicit monitoring verbosity set.
  * Move Mastodon social hosting from Fosstodon to FLOSS.social: https://floss.social/@borgmatic
+ * The borgmatic project no longer accepts pull requests on GitHub. But see
+   https://torsion.org/borgmatic/#contributing for how you can still submit pull requests. You can
+   even use your GitHub account to login.
 
 2.0.4
  * #1072: Fix path rewriting for non-root patterns in the ZFS, Btrfs, and LVM hooks.
